src/tests/resources/players/valid/firstnameLastnameGender.players
Андрей Иванов B
Артем Петров M
Слава Трубицин M
Света Прищенко G
Маша Ивановская Д
Катя Попова W