src/tests/resources/players/invalid/wrongGender.players
Андрей Иванов B
Артем Петров M
Слава Трубицин S
Света Прищенко G
Маша Ивановская Д
Катя Попова W